@@ -222,6 +222,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 15466) Added action=purge
 * (bug 15486) action=block ignores autoblock parameter
 * (bug 15492) added rcprop=loginfo to list=recentchanges
+* (bug 15527) action=rollback can now revert anonymous editors
 
 === Languages updated in 1.14 ===
 
